k8s/apm-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: apm-server
  name: apm-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apm-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: apm-server
    spec:
      containers:
        - env:
            - name: output.elasticsearch.hosts
              value: '["elasticsearch:9200"]'
            - name: setup.kibana.host
              value: '"kibana:5601"'
          image: docker.elastic.co/apm/apm-server:8.17.2
          name: apm-server
          ports:
            - containerPort: 8200
              protocol: TCP
      restartPolicy: Always
