k8s/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: discovery.type
              value: single-node
            - name: xpack.security.enabled
              value: "false"
          image: docker.elastic.co/elasticsearch/elasticsearch:8.17.2
          name: elasticsearch
          ports:
            - containerPort: 9200
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: es-data
      restartPolicy: Always
      volumes:
        - name: es-data
          persistentVolumeClaim:
            claimName: es-data
