k8s/apm-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: apm-server
  name: apm-server
spec:
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
  selector:
    io.kompose.service: apm-server
