k8s/ing-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: otel
spec:
  ingressClassName: traefik
  rules:
  - host: kibana.local
    http:
      paths:
      - backend:
          service:
            name: kibana
            port:
              number: 5601 
        path: /
        pathType: ImplementationSpecific
